src/objects/Payment_Link__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payment Links</relationshipLabel>
        <relationshipName>Payment_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Link_Sent_Date__c</fullName>
        <label>Link Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Link_Status__c</fullName>
        <formula>IF((NOW() -  Link_Sent_Date__c ) &lt;= 20, &apos;Active&apos;, &apos;Expired&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Key__c</fullName>
        <label>Payment Key</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Link__c</fullName>
        <label>Payment Link</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Payment Link</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Link_Status__c</columns>
        <columns>Email__c</columns>
        <columns>Link_Sent_Date__c</columns>
        <columns>Payment_Link__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PLE-{000000}</displayFormat>
        <label>Payment Link Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>